<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.fanygtz.administrarcontactos.ConfirmarDatos">

    <TextView
        android:id="@+id/tvNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreCompleto"
        android:theme="@style/MiTexto"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lfecha"
            android:theme="@style/MiEtiqueta"/>
        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaNacimiento"
            android:theme="@style/MiTexto"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ltelefono"
            android:theme="@style/MiEtiqueta"/>
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:theme="@style/MiTexto"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lemail"
            android:theme="@style/MiEtiqueta"/>
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:theme="@style/MiTexto"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ldescripcion"
            android:theme="@style/MiEtiqueta"/>
        <TextView
            android:id="@+id/tvDescripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcionContacto"
            android:lines="4"
            android:theme="@style/MiTexto"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnEditarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEditar"
        android:onClick="editarDatos"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
