<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="mx.fanygtz.administrarcontactos.MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tieNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombreCompleto"/>
        </android.support.design.widget.TextInputLayout>

        <DatePicker
            android:id="@+id/dpFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:background="@color/colorPrimaryLight"
            ></DatePicker>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tieTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tieEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutDescripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tieDescripcionContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcionContacto"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSiguiente"
            android:theme="@style/MiBotonRaised"
            android:onClick="siguienteAct" />
    </LinearLayout>
</ScrollView>
